fix: toolbox json output overflow

--- a/src/scss/toolbox/json.scss
+++ b/src/scss/toolbox/json.scss
@@ -30,6 +30,7 @@
         .output {
             @extend %flex-column;
             height: calc(100vh - 10rem);
+            overflow: auto;
 
             .code-text {
                 flex: 0 0 auto;
